--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "canvas": "^2.6.0",
     "core-js": "^3.3.2",
+    "fibers": "^4.0.2",
+    "sass": "^1.23.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-text-highlight": "^2.0.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "tailwindcss": "^1.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -53,11 +58,6 @@
         }
       }
     ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
   },
   "browserslist": [
     "> 1%",
