--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fibers": "^4.0.2",
     "sass": "^1.23.3",
     "vue": "^2.6.10",
+    "vue-highlight-words": "^1.2.0",
     "vue-router": "^3.1.3",
     "vue-text-highlight": "^2.0.10",
     "vuex": "^3.0.1"
